@@ -3,6 +3,7 @@
 //
 
 #include <stdlib.h>
+#include <math.h>
 
 #include "movement.h"
 #include "utils.h"
@@ -10,35 +11,78 @@
 
 int isRock(gridCell_t** grid, int x, int y);
 int isImmutable(gridCell_t **grid, int x, int y);
-void generateRandMove(dungeon_t* dungeonPtr, int srcX, int srcY, int* dstX, int* dstY, int tunneling);
-void moveMonster(dungeon_t* dungeonPtr, int srcX, int srcY, int dstX, int dstY);
+void generateRandMove(dungeon_t* dungeonPtr, monster_t* monsterPtr, int* dstX, int* dstY);
+void generateShortestMove(dungeon_t* dungeonPtr, monster_t* monsterPtr, int* dstX, int* dstY);
+void generateDirectMove(dungeon_t* dungeonPtr, monster_t* monsterPtr, int* dstX, int* dstY);
+void moveMonster(dungeon_t* dungeonPtr, monster_t* monsterPtr, int dstX, int dstY);
+int isLineOfSight(gridCell_t** grid, int x1, int y1, int x2, int y2);
 
-void movePC(dungeon_t* dungeonPtr) {
-    int targetX, targetY;
-    generateRandMove(dungeonPtr, dungeonPtr->PC.x, dungeonPtr->PC.y, &targetX, &targetY, 1);
-    moveMonster(dungeonPtr, dungeonPtr->PC.x, dungeonPtr->PC.y, targetX, targetY);
-}
+//void movePC(dungeon_t* dungeonPtr) {
+//    int targetX, targetY;
+//    generateRandMove(dungeonPtr, dungeonPtr->PC.x, dungeonPtr->PC.y, &targetX, &targetY, 1);
+//    moveMonster(dungeonPtr, dungeonPtr->PC.x, dungeonPtr->PC.y, targetX, targetY);
+//}
 
-void moveMonsterLogic(dungeon_t* dungeonPtr, monster_t m) {
-    if (!m.alive) {
+void moveMonsterLogic(dungeon_t* dungeonPtr, monster_t* monsterPtr) {
+    if (!monsterPtr->alive) {
         return;
     }
 
     int dstX, dstY;
-    if (m.type & MONSTER_ERRATIC) {
+    if (monsterPtr->type & MONSTER_ERRATIC) {
         if (rand() % 2) {
             // random movement
-            generateRandMove(dungeonPtr, m.x, m.y, &dstX, &dstY, m.type & MONSTER_TUNNELING);
+            generateRandMove(dungeonPtr, monsterPtr, &dstX, &dstY);
+            moveMonster(dungeonPtr, monsterPtr, dstX, dstY);
             return;
         }
     }
-    //TODO
-    generateRandMove(dungeonPtr, m.x, m.y, &dstX, &dstY, m.type & MONSTER_TUNNELING);
-    moveMonster(dungeonPtr, m.x, m.y, dstX, dstY);
+    if (monsterPtr->type & MONSTER_INTELLIGENT) {
+        // intelligent
+        if (monsterPtr->type & MONSTER_TELEPATHIC) {
+            generateShortestMove(dungeonPtr, monsterPtr, &dstX, &dstY);
+            moveMonster(dungeonPtr, monsterPtr, dstX, dstY);
+        } else {
+            // Only move if the PC is visible or there is a last known location of the PC, otherwise stay put.
+            if (isLineOfSight(dungeonPtr->grid, monsterPtr->x, monsterPtr->y, dungeonPtr->PC.x, dungeonPtr->PC.y)) {
+                // PC is visible
+                generateShortestMove(dungeonPtr, monsterPtr, &dstX, &dstY);
+                moveMonster(dungeonPtr, monsterPtr, dstX, dstY);
+            } else if (monsterPtr->lastPCX) {
+                // PC is remembered
+                generateDirectMove(dungeonPtr, monsterPtr, &dstX, &dstY);
+                moveMonster(dungeonPtr, monsterPtr, dstX, dstY);
+            }
+        }
+    } else {
+        // not intelligent
+        if (monsterPtr->type & MONSTER_TELEPATHIC) {
+            generateDirectMove(dungeonPtr, monsterPtr, &dstX, &dstY);
+            moveMonster(dungeonPtr, monsterPtr, dstX, dstY);
+        } else {
+            // not telepathic
+            generateRandMove(dungeonPtr, monsterPtr, &dstX, &dstY);
+            moveMonster(dungeonPtr, monsterPtr, dstX, dstY);
+        }
+    }
+
+    // Keep track of line-of-sight memory
+    if (isLineOfSight(dungeonPtr->grid, monsterPtr->x, monsterPtr->y, dungeonPtr->PC.x, dungeonPtr->PC.y)) {
+        monsterPtr->lastPCX = dungeonPtr->PC.x;
+        monsterPtr->lastPCY = dungeonPtr->PC.y;
+    }
 }
 
-void moveMonster(dungeon_t* dungeonPtr, int srcX, int srcY, int dstX, int dstY) {
+void moveMonster(dungeon_t* dungeonPtr, monster_t* monsterPtr, int dstX, int dstY) {
+    int srcX = monsterPtr->x;
+    int srcY = monsterPtr->y;
     gridCell_t** grid = dungeonPtr->grid;
+
+    // Do not do anything if the "move" is nothing
+    if (monsterPtr->x == dstX && monsterPtr->y == dstY) {
+        return;
+    }
+
     if (grid[dstY][dstX].monsterPtr != NULL) {
         // A monster is eating another.  We must delete the eaten one.
         int toRemove = 0; // skipping the PC at index 0
@@ -58,13 +102,14 @@ void moveMonster(dungeon_t* dungeonPtr, int srcX, int srcY, int dstX, int dstY) 
     }
 }
 
-void generateRandMove(dungeon_t* dungeonPtr, int srcX, int srcY, int* dstX, int* dstY, int tunneling) {
+void generateRandMove(dungeon_t* dungeonPtr, monster_t* monsterPtr, int* dstX, int* dstY) {
     direction_t movementDir;
+    int tunneling = monsterPtr->type & MONSTER_TUNNELING;
     int targetX, targetY;
     do {
         movementDir = utilRandDir();
-        targetX = srcX;
-        targetY = srcY;
+        targetX = monsterPtr->x;
+        targetY = monsterPtr->y;
         if (movementDir & north) {
             targetY--;
         } else if (movementDir & south) {
@@ -80,6 +125,59 @@ void generateRandMove(dungeon_t* dungeonPtr, int srcX, int srcY, int* dstX, int*
     *dstY = targetY;
 }
 
+void generateShortestMove(dungeon_t* dungeonPtr, monster_t* monsterPtr, int* dstX, int* dstY) {
+    //TODO
+    generateRandMove(dungeonPtr, monsterPtr, dstX, dstY);
+}
+
+void generateDirectMove(dungeon_t* dungeonPtr, monster_t* monsterPtr, int* dstX, int* dstY) {
+    int targetX = monsterPtr->x;
+    int targetY = monsterPtr->y;
+    direction_t direction = calculateDirection(targetX, targetY, dungeonPtr->PC.x, dungeonPtr->PC.y);
+    if (direction & north) {
+        targetY--;
+    }
+    if (direction & east) {
+        targetX++;
+    }
+    if (direction & south) {
+        targetY++;
+    }
+    if (direction & west) {
+        targetX--;
+    }
+    if (!(monsterPtr->type & MONSTER_TUNNELING)) {
+        // Nontuneling
+        if (isRock(dungeonPtr->grid, targetX, targetY)) {
+            // Direct path is blocked, try orthogonal
+            targetX = monsterPtr->x;
+            targetY = monsterPtr->y;
+            if (direction & north) {
+                if (!isRock(dungeonPtr->grid, targetX, targetY - 1)) {
+                    targetY--;
+                }
+            }
+            if (direction & east) {
+                if (!isRock(dungeonPtr->grid, targetX + 1, targetY)) {
+                    targetX++;
+                }
+            }
+            if (direction & south) {
+                if (!isRock(dungeonPtr->grid, targetX, targetY + 1)) {
+                    targetY++;
+                }
+            }
+            if (direction & west) {
+                if (!isRock(dungeonPtr->grid, targetX - 1, targetY)) {
+                    targetX--;
+                }
+            }
+        }
+    }
+    *dstX = targetX;
+    *dstY = targetY;
+}
+
 int isRock(gridCell_t** grid, int x, int y) {
     return grid[y][x].material == rock;
 }
@@ -88,4 +186,27 @@ int isImmutable(gridCell_t **grid, int x, int y) {
     return grid[y][x].hardness == ROCK_HARDNESS_IMMUTABLE;
 }
 
-//int isLineOfSight
+int isLineOfSight(gridCell_t** grid, int x1, int y1, int x2, int y2) {
+    double slope;
+    int leftX, leftY;
+    int rightX, rightY;
+    if (x1 < x2) {
+        leftX = x1;
+        leftY = y1;
+        rightX = x2;
+        rightY = y2;
+    } else {
+        leftX = x2;
+        leftY = y2;
+        rightX = x1;
+        rightY = y1;
+    }
+    slope = ((double) (leftY - rightY)) / (leftX - rightX);
+    for (int x = leftX; x < rightX; x++) {
+        int y = (int) (round((x - leftX) * slope) + leftY);
+        if (grid[y][x].hardness != 0) {
+            return 0;
+        }
+    }
+    return 1;
+}
