@@ -1,4 +1,7 @@
 2016-02-23
+Monsters that try a direct path to the PC work.
+
+2016-02-23
 End conditions and printing only happens after PC's turn.
 
 2016-02-23
